--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="header">
         <nav class="header__menu">
             <a href="index.html" class="header_menu_link">Home</a>
-            <a href="SobreMi.html" class="header_menu_link">Sobre mi</a>
+            <a href="about.html" class="header_menu_link">Sobre mi</a>
         </nav>
     </header>
     <main class="Presentation">
