Franco Orellana Calderon

--- a/about.html
+++ b/about.html
@@ -4,15 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Krona+One&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">    
-<title>Negocio Digital</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <title>Figma</title>
+    <link rel="stylesheet" href="./Style.css">
 </head>
-<body> 
+<body>
     <header class="header">
         <nav class="header__menu">
             <a href="index.html" class="header_menu_link">Home</a>
@@ -33,12 +31,11 @@
                 texto de un sitio mientras que mira su diseño. El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, contenido aquí". Estos textos hacen parecerlo un español que se puede leer.
             </p>
         </section>
-        <img src="WhatsApp Image 2025-03-17 at 08.09.15.jpeg" alt="">  
+        <img src="WhatsApp Image 2025-03-17 at 08.09.15.jpeg" alt="">
     </main>
-    <footer class="text_inf">
-        <p class="Desarrollador">Desarrollador Carlos Lopez</p>
-    </footer>
+    <footer class="footer">
+        <p>Desarrollado por: Franco Orellana</p>
+
+    </footer>    
 </body>
 </html>
-
-
