--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-<title>Negocio Digital</title>
-    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <title>Figma</title>
+    <link rel="stylesheet" href="./Style.css">
 </head>
+
 <body>
     <header class="header">
         <nav class="header__menu">
@@ -32,12 +34,14 @@
                 <a class="Presentation_cont_Link1" href=""><img src="./assets/github.png" alt="loguito2"> Git Hubb</a>
                 <a class="Presentation_cont_Link1" href=""><img src="./assets/twitch.png" alt="loguito3"> Twitch</a>
             </div>
-
         </section>
-        <img src="WhatsApp Image 2025-03-17 at 08.09.15.jpeg" alt="">  
+        <img src="WhatsApp Image 2025-03-17 at 08.09.15.jpeg" alt="">
     </main>
-    <footer class="text_inf">
-        <p class="desarrollador">Desarrollador Franco Orellana</p>
+    <footer class="footer">
+        <p>Desarrollado por: Franco Orellana</p>
+
     </footer>
+    
 </body>
+
 </html>
