--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <title>Figma</title>
-    <link rel="stylesheet" href="./Style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="header">
